--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy": "npm run build && node ./deploy"
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7",
     "qs": "^6.6.0",
+    "scp2": "^0.5.0",
     "vue": "^2.6.6",
     "vue-awesome-swiper": "^3.1.3",
     "vue-axios": "^2.1.4",
